--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Alderson.js is a utility for simulating responses from APIs. It can also act as a proxy to your real API, whilst acting as a middleman.",
   "main": "./dist/index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -17,7 +18,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "run_delayed_echo": "npm start delayed_echo.json",
+    "run_delayed_echo": "npm start examples/delayed_echo.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
