--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prestart": "npm run build",
     "start": "node .",
     "run_delayed_echo": "npm start examples/delayed_echo.json",
+    "run_basic_echo": "npm start examples/basic_echo.json",
+    "run_delayed_origin": "npm start examples/delayed_origin.json examples/basic_echo.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
