Can send static content and set status codes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "run_delayed_echo": "npm start examples/delayed_echo.json",
     "run_basic_echo": "npm start examples/basic_echo.json",
     "run_delayed_origin": "npm start examples/delayed_origin.json examples/basic_echo.json",
+    "run_static_response": "npm start examples/static_response.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
