--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   "bugs": {
     "url": "https://github.com/GeekFiftyFive/Alderson.js/issues"
   },
+  "bin": {
+    "andersonjs": "./dist/index.js"
+  },
   "homepage": "https://github.com/GeekFiftyFive/Alderson.js#readme"
 }
