--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alderson",
+  "name": "aldersonjs",
   "version": "1.0.0",
   "description": "Alderson.js is a utility for simulating responses from APIs. It can also act as a proxy to your real API, whilst acting as a middleman.",
   "main": "./dist/index.js",
