--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/GeekFiftyFive/Alderson.js/issues"
   },
   "bin": {
-    "andersonjs": "./dist/index.js"
+    "aldersonjs": "./dist/index.js"
   },
   "homepage": "https://github.com/GeekFiftyFive/Alderson.js#readme"
 }
