Further Github Actions fixes

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+      - run: npm run build
 
   publish-npm:
     needs: build
