--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
@@ -24,7 +26,7 @@
     "run_delayed_origin": "npm start examples/delayed_origin.json examples/basic_echo.json",
     "run_static_response": "npm start examples/static_response.json",
     "run_delayed_echo_all": "npm start examples/delayed_echo_all.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "files": [
     "/dist"
