--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.10",
     "@types/node": "^14.0.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
@@ -31,6 +32,13 @@
   "files": [
     "/dist"
   ],
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": ["ts", "tsx", "js"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GeekFiftyFive/Alderson.js.git"
