--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pem-jwk": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
+    "@types/pem-jwk": "^1.5.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
     "tslint": "^6.1.3",
@@ -28,6 +32,7 @@
     "run_static_response": "npm start examples/static_response.json",
     "run_delayed_echo_all": "npm start examples/delayed_echo_all.json",
     "run_delayed_origin_all": "npm start examples/basic_origin_all.json examples/delayed_echo_all.json",
+    "run_authenticated": "npm start examples/authenticated.json",
     "test": "jest"
   },
   "files": [
